move vendor out from main.bundle.js

--- a/static/index.html
+++ b/static/index.html
@@ -2,16 +2,16 @@
 <html>
 
 <head>
-    <title>copy-tool</title>
-    <meta charset="UTF-8">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="renderer" content="webkit" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Copy Tool</title>
 </head>
 
 <body>
     <app>Loading...</app>
-    <script src="../node_modules/core-js/client/shim.min.js"></script>
-    <script src="../node_modules/zone.js/dist/zone.js"></script>
-    <script src="../node_modules/tslib/tslib.js"></script>
+    <script src="./vendor.bundle.js"></script>
     <script src="./main.bundle.js"></script>
 </body>
 
