--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <app>Loading...</app>
+    <canvas id="qr"></canvas>
     <script src="./vendor.bundle.js"></script>
     <script src="./main.bundle.js"></script>
 </body>
