--- a/static/index.ejs.html
+++ b/static/index.ejs.html
@@ -13,8 +13,12 @@
 
 <body>
     <a class="github-fork-ribbon right-bottom" href="https://github.com/plantain-00/copy-tool" title="Fork me on GitHub" target="_blank">Fork me on GitHub</a>
-    <app></app>
-    <canvas id="qr"></canvas>
+    <div class="container">
+        <app></app>
+        <div class="row">
+            <canvas id="qr"></canvas>
+        </div>
+    </div>
     <script src="./<%=staticVendorBundleJs %>"></script>
     <script src="./<%=staticMainBundleJs %>"></script>
 </body>
