--- a/static/app.template.html
+++ b/static/app.template.html
@@ -1,10 +1,32 @@
-<h2>copy-tool</h2>
-<textarea [(ngModel)]="newText"></textarea>
-<button (click)="copyText()">copy</button>
-<input type="file" (change)="copyFile($event)">
-<ul>
-    <li *ngFor="let message of acceptMessages">
-        <span *ngIf="message.kind === 'text'">{{message.value}}</span>
-        <a *ngIf="message.kind === 'file'" [href]="message.url" [download]="message.value.name">{{message.value.name}}</a>
-    </li>
-</ul>
+<div class="row">
+    <div class="col-md-12">
+        <h4>Copy-Tool</h4>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <textarea class="form-control" rows="5" [(ngModel)]="newText"></textarea>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <button class="btn btn-primary copy-button" (click)="copyText()">Copy</button>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <input type="file" class="form-control" (change)="copyFile($event)">
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <ul>
+            <li *ngFor="let message of acceptMessages">
+                <span class="label label-default">{{message.moment}}</span>
+                <span class="label label-info">{{message.kind}}</span>
+                <pre *ngIf="message.kind === 'text'">{{message.value}}</pre>
+                <a *ngIf="message.kind === 'file'" class="btn btn-link" [href]="message.url" [download]="message.value.name">{{message.value.name}}</a>
+            </li>
+        </ul>
+    </div>
+</div>
