fix IE11 support

--- a/static/index.ejs.html
+++ b/static/index.ejs.html
@@ -7,8 +7,8 @@
     <meta name="renderer" content="webkit" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Copy Tool</title>
-    <link href="./<%=staticVendorBundleCss %>" rel="preload" as="style" onload="this.rel='stylesheet'" crossOrigin = "anonymous" integrity="<%=sri.staticVendorBundleCss %>">
-    <link href="./<%=staticIndexBundleCss %>" rel="preload" as="style" onload="this.rel='stylesheet'" crossOrigin = "anonymous" integrity="<%=sri.staticIndexBundleCss %>">
+    <link href="./<%=staticVendorBundleCss %>" rel="stylesheet" crossOrigin = "anonymous" integrity="<%=sri.staticVendorBundleCss %>">
+    <link href="./<%=staticIndexBundleCss %>" rel="stylesheet" crossOrigin = "anonymous" integrity="<%=sri.staticIndexBundleCss %>">
 </head>
 
 <body>
