--- a/static/app.template.html
+++ b/static/app.template.html
@@ -17,7 +17,7 @@
     <div class="col-md-12">
         <file-uploader (fileUploaded)="fileUploaded($event)"
             multiple="true"
-            locale="zh-cn">
+            [locale]="locale">
         </file-uploader>
     </div>
 </div>
