notify client count to all clients in the room

--- a/static/app.template.html
+++ b/static/app.template.html
@@ -10,7 +10,7 @@
 </div>
 <div class="row">
     <div class="col-md-12">
-        <button class="btn btn-primary copy-button" (click)="copyText()">Copy</button>
+        <button class="btn btn-primary copy-button" (click)="copyText()">{{buttonText}}</button>
     </div>
 </div>
 <div class="row">
