--- a/static/index.ejs.html
+++ b/static/index.ejs.html
@@ -14,13 +14,13 @@
 <body>
     <a class="github-fork-ribbon right-bottom" href="https://github.com/plantain-00/copy-tool" title="Fork me on GitHub" target="_blank">Fork me on GitHub</a>
     <div class="container">
-        <app></app>
+        <div id="body"></div>
         <div class="row">
             <canvas id="qr"></canvas>
         </div>
     </div>
     <script defer="defer" src="./<%=staticVendorBundleJs %>" crossOrigin="anonymous" integrity="<%=sri.staticVendorBundleJs %>"></script>
-    <script defer="defer" src="./<%=staticMainBundleJs %>" crossOrigin="anonymous" integrity="<%=sri.staticMainBundleJs %>"></script>
+    <script defer="defer" src="./<%=staticIndexBundleJs %>" crossOrigin="anonymous" integrity="<%=sri.staticIndexBundleJs %>"></script>
 </body>
 
 </html>
