--- a/static/app.template.html
+++ b/static/app.template.html
@@ -31,6 +31,18 @@
     </div>
     <div class="row">
         <div class="col-md-12">
+            <label class="radio-inline"><input type="radio" v-model="speed" value="10"> 100KB/s</label>
+            <label class="radio-inline"><input type="radio" v-model="speed" value="20"> 200KB/s</label>
+            <label class="radio-inline"><input type="radio" v-model="speed" value="50"> 500KB/s</label>
+            <label class="radio-inline"><input type="radio" v-model="speed" value="100"> 1MB/s</label>
+            <label class="radio-inline"><input type="radio" v-model="speed" value="200"> 2MB/s</label>
+            <label class="radio-inline"><input type="radio" v-model="speed" value="500"> 5MB/s</label>
+            <label class="radio-inline"><input type="radio" v-model="speed" value="1000"> 10MB/s</label>
+            <label class="radio-inline"><input type="radio" v-model="speed" value="Infinity"> No limit(Will block the UI)</label>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
             <file-uploader @file-uploaded="fileUploaded(arguments[0])" multiple="true" :locale="locale">
             </file-uploader>
         </div>
