--- a/static/app.template.html
+++ b/static/app.template.html
@@ -16,7 +16,7 @@
     </div>
     <div class="row" v-if="canCreateOffer">
         <div class="col-md-12">
-            <button class="btn btn-default copy-button" @click="startToConnect()">start to connect</button>
+            <button class="btn btn-default copy-button" @click="tryToConnect()">try to connect</button>
         </div>
     </div>
     <div class="row" v-for="(file, index) in files">
