add web app manifest

--- a/static/index.ejs.html
+++ b/static/index.ejs.html
@@ -7,6 +7,7 @@
     <meta name="renderer" content="webkit" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Copy Tool</title>
+    <link rel="manifest" href="/manifest.webmanifest">
     <link href="./<%=staticVendorBundleCss %>" rel="stylesheet" crossOrigin="anonymous" integrity="<%=sri.staticVendorBundleCss %>">
     <link href="./<%=staticIndexBundleCss %>" rel="stylesheet" crossOrigin="anonymous" integrity="<%=sri.staticIndexBundleCss %>">
 </head>
