--- a/static/app.template.html
+++ b/static/app.template.html
@@ -43,7 +43,7 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            <file-uploader @file-uploaded="fileUploaded($event)" multiple="true" :locale="locale">
+            <file-uploader @file-got="fileGot($event)" multiple="true" :locale="locale">
             </file-uploader>
         </div>
     </div>
