--- a/static/index.ejs.html
+++ b/static/index.ejs.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Copy Tool</title>
     <link rel="manifest" href="/manifest.webmanifest">
-    <link href="./<%=staticVendorBundleCss %>" rel="stylesheet" crossOrigin="anonymous" integrity="<%=sri.staticVendorBundleCss %>">
-    <link href="./<%=staticIndexBundleCss %>" rel="stylesheet" crossOrigin="anonymous" integrity="<%=sri.staticIndexBundleCss %>">
+    <link href="./<%=vendorBundleCss %>" rel="stylesheet" crossOrigin="anonymous" integrity="<%=sri.vendorBundleCss %>">
+    <link href="./<%=indexBundleCss %>" rel="stylesheet" crossOrigin="anonymous" integrity="<%=sri.indexBundleCss %>">
 </head>
 
 <body>
@@ -20,8 +20,8 @@
             <canvas id="qr"></canvas>
         </div>
     </div>
-    <script defer="defer" src="./<%=staticVendorBundleJs %>" crossOrigin="anonymous" integrity="<%=sri.staticVendorBundleJs %>"></script>
-    <script defer="defer" src="./<%=staticIndexBundleJs %>" crossOrigin="anonymous" integrity="<%=sri.staticIndexBundleJs %>"></script>
+    <script defer="defer" src="./<%=vendorBundleJs %>" crossOrigin="anonymous" integrity="<%=sri.vendorBundleJs %>"></script>
+    <script defer="defer" src="./<%=indexBundleJs %>" crossOrigin="anonymous" integrity="<%=sri.indexBundleJs %>"></script>
 </body>
 
 </html>
