--- a/static/index.ejs.html
+++ b/static/index.ejs.html
@@ -13,9 +13,11 @@
 </head>
 
 <body>
-    <a class="github-fork-ribbon right-bottom" href="https://github.com/plantain-00/copy-tool" title="Fork me on GitHub" target="_blank">Fork me on GitHub</a>
+    <a class="github-fork-ribbon right-bottom" href="https://github.com/plantain-00/copy-tool" title="Fork me on GitHub" target="_blank" rel="noopener">Fork me on GitHub</a>
     <div class="container">
-        <div id="body"></div>
+        <div id="prerender-container">
+            <div id="body"><%-context.prerender %></div>
+        </div>
         <div class="row">
             <canvas id="qr"></canvas>
         </div>
