--- a/static/app.template.html
+++ b/static/app.template.html
@@ -19,7 +19,7 @@
             <button class="btn btn-default copy-button" @click="tryToConnect()">try to connect</button>
         </div>
     </div>
-    <div class="row" v-for="(file, index) in files">
+    <div class="row" v-for="(file, index) in files" key="index">
         <div class="col-md-12">
             <div class="progress">
                 <div class="progress-bar progress-bar-success" role="progressbar" :aria-valuenow="file.progress" aria-valuemin="0" aria-valuemax="100"
@@ -50,7 +50,7 @@
     <div class="row">
         <div class="col-md-12">
             <ul>
-                <li v-for="(message, index) in acceptMessages">
+                <li v-for="(message, index) in acceptMessages" key="message.id">
                     <span class="label label-default">{{message.moment}}</span>
                     <span class="label label-info">{{message.kind}}</span>
                     <button v-if="message.kind === 'text'" class="btn btn-xs btn-default clipboard" :data-clipboard-target="'#clipboard_' + message.id">copy</button>
