--- a/static/index.ejs.html
+++ b/static/index.ejs.html
@@ -16,7 +16,7 @@
     <a class="github-fork-ribbon right-bottom" href="https://github.com/plantain-00/copy-tool" data-ribbon="Fork me on GitHub" title="Fork me on GitHub" target="_blank" rel="noopener">Fork me on GitHub</a>
     <div class="container">
         <div id="prerender-container">
-            <div id="body"><%-context.prerender %></div>
+            <div id="body"></div>
         </div>
         <div class="row">
             <canvas id="qr"></canvas>
